# alpg

./: CMakeLists.txt  Makefile  README.md
cmake/: FindPostgreSQL.cmake  FindcJSON.cmake
src/: CMakeLists.txt  Makefile  alpg--0.0.1.sql  alpg.c  alpg.control  curl_helpers.c  curl_helpers.h  print_helpers.c  print_helpers.h
